--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/carolinem15/project3#readme",
   "dependencies": {
+    "axios": "^0.21.0",
+    "express": "^4.17.1",
     "mongoose": "^5.11.8"
   }
 }
